src/test/deca/syntax/invalid/lexer/flottants_lex-lex.corr
INT: [@0,343:343='0',<45>,14:0]
INT: [@1,345:348='1234',<45>,15:0]
FLOAT: [@2,350:357='123.5e+4',<46>,16:0]
FLOAT: [@3,359:368='543.5E-12f',<46>,17:0]
FLOAT: [@4,370:377='63423.0F',<46>,18:0]
FLOAT: [@5,379:390='0xABCDE.FP-1',<46>,19:0]
FLOAT: [@6,392:417='0Xabcdef0123456789.5EDp+5f',<46>,20:0]
FLOAT: [@7,419:425='0X1.2P1',<46>,21:0]
PLUS: [@8,494:494='+',<5>,25:0]
INT: [@9,495:497='123',<45>,25:1]
MINUS: [@10,499:499='-',<6>,26:0]
INT: [@11,500:502='123',<45>,26:1]
INT: [@12,504:504='0',<45>,27:0]
IDENT: [@13,505:508='x1p1',<47>,27:1]
INT: [@14,599:599='0',<45>,31:0]
IDENT: [@15,600:601='x1',<47>,31:1]
DOT: [@16,602:602='.',<10>,31:3]
INT: [@17,603:603='0',<45>,31:4]
IDENT: [@18,604:605='pA',<47>,31:5]
INT: [@19,658:658='0',<45>,35:0]
IDENT: [@20,659:660='x1',<47>,35:1]
DOT: [@21,661:661='.',<10>,35:3]
INT: [@22,662:662='0',<45>,35:4]
INT: [@23,705:705='0',<45>,38:0]
INT: [@24,706:706='0',<45>,38:1]
INT: [@25,707:707='0',<45>,38:2]
INT: [@26,708:708='0',<45>,38:3]
INT: [@27,775:775='0',<45>,42:0]
IDENT: [@28,776:777='xG',<47>,42:1]
DOT: [@29,778:778='.',<10>,42:3]
INT: [@30,779:779='0',<45>,42:4]
IDENT: [@31,780:781='p1',<47>,42:5]
